--- a/.gitIgnore
+++ b/.gitIgnore
@@ -4,3 +4,7 @@ bashar-poc3.pem
 terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.68.0/linux_amd64/terraform-provider-aws_v5.68.0_x5
 terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.68.0/linux_amd64/LICENSE.txt
 terraform/.terraform/
+*.zip
+*.tar.gz
+secrets.txt
+variables.tf
